openshift/base/infrastructure/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airlines-keycloak
  namespace: airlines-backend-microservices
  labels:
    app: airlines-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airlines-keycloak
  template:
    metadata:
      labels:
        app: airlines-keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          args:
            - "start-dev"
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
