openshift/base/infrastructure/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airlines-keycloak-service
  namespace: airlines-backend-microservices
  labels:
    app: airlines-keycloak
spec:
  selector:
    app: airlines-keycloak
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
