openshift/base/infrastructure/keycloak/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: airlines-keycloak-route
  namespace: airlines-backend-microservices
spec:
  to:
    kind: Service
    name: airlines-keycloak
  port:
    targetPort: http
  tls:
    termination: edge
